# book-store-api

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
book_store/: __init__.py  app.py
book_store/src/: __init__.py
book_store/src/handler/: author.py  book.py  order.py  user.py  utils.py
book_store/src/models/: main.py
book_store/src/routes/: author.py  book.py  order.py  user.py
book_store/src/schemas/: main.py
