[tool.poetry]
name = "book_store"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
bcrypt = "^3.2.2"
pipreqs = "^0.4.11"
python-multipart = "^0.0.5"
fastapi-jwt-auth = "^0.5.0"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
